# controlcenter

./: .dockerignore  .env.ci  .env.example  .gitignore  .mcp.json  .mise.toml  .npmrc  .phpactor.json  .pre-commit-config.yaml  .release-please-manifest.json  .styleci.yml  API.md  CHANGELOG.md  CLAUDE.md  CNAME  CONFIGURE.md  CONTRIBUTE.md  Dockerfile  LICENSE  README.md  UPGRADE.md  boost.json  composer.json  deploy.sh  dock.sh  docker-compose.dev.full.yaml  docker-compose.dev.yaml  docker-compose.yaml  flake.nix  init-dev.sh  opencode.json  package-lock.json  package.json  phpstan.neon  phpunit.xml  pint.json  release-notes.md  release-please-config.json  sail  schedule-script.ps1  (+4 more)
dev/: 404.html  <  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
dev/activity/: index.html
dev/api/: index.html
dev/background-jobs/: index.html
dev/concepts/: index.html
dev/configuration/: index.html
dev/contribute/: index.html
dev/custom/: index.html
dev/getting-started/: index.html
dev/installation/: index.html
dev/search/: search_index.json
dev/upgrade/: index.html
dev/user-themes/: index.html
dev/why/: index.html
docs/: .gitignore  activity.md  api.md  background-jobs.md  contribute.md  getting-started.md  index.md  installation.md  mkdocs.yml  pyproject.toml  upgrade.md  user-themes.md  why.md
docs/_includes/: abbreviations.md  exec-in-container.md
docs/_theme/: README.md
docs/concepts/: booking.md  buddies.md  index.md  mentors.md  permissions.md  positions.md  ratings.md  tasks.md  training.md
docs/configuration/: index.md  system.md
(+1013 files in other folders)
