[project]
name = "controlcenter-docs"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Thor K. Høgås", email = "thor@roht.no"},
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "GPL3"}
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.2",
    "mike>=2.0.0",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-git-revision-date-localized-plugin>=1.2.2",
    "mkdocs-git-committers-plugin-2>=2.2.2",
]


[tool.pdm]
package-type = "application"

[tool.pdm.scripts]
"docs:serve" = { cmd = "mike serve", help = "View local documentation" }
"docs:build" = { cmd = "mike deploy --ignore-remote-status dev", help = "Build local documentation" }
